# MyPalace

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
alembic/: env.py
alembic/versions/: 2026_05_04_0001_baseline.py  2026_05_04_0002_composite_indexes.py  2026_05_04_0003_worker_lease.py  2026_05_04_0004_memory_expires_at.py  2026_05_04_0005_audit_logs.py  2026_05_04_0006_memory_versions.py  2026_05_05_0007_entity_aliases.py  2026_05_05_0008_personality_traits.py  2026_05_05_0009_messages_fts.py  2026_05_05_0010_per_tenant_shadow_copy.py  2026_05_31_0011_emotional_contexts.py  2026_05_31_0012_topic_mentions.py  2026_05_31_0013_backfill_tenant_id.py
apps/admin-ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/admin-ui/src/: App.tsx  main.tsx
docs/: SPEC.md  admin-ui-design.md  deployment.md  gap-analysis-mypalclara.md  migrating-mypalclara.md  per-tenant-schemas-design.md  plan.md
examples/: mypalclara_router.py
mypalace/: _sentiment.py  arc_service.py  config.py  context_service.py  database.py  embeddings.py  emotional_service.py  entity_service.py  episode_service.py  job_service.py  llm.py  main.py  memory_service.py  models.py  personality_service.py  session_service.py  tenancy.py  topic_service.py  vch_service.py  vector.py
mypalace/api/: admin.py  arcs.py  audit.py  common.py  context.py  dynamics.py  emotional.py  entities.py  episodes.py  events.py  graph.py  intentions.py  jobs.py  maintenance.py  memories.py  personality.py  portability.py  reembed.py  retrieval.py  sessions.py  stats.py  tenants.py  topics.py  vch.py
mypalace/audit/: __init__.py  middleware.py
mypalace/auth/: __init__.py  context.py  key_service.py  middleware.py  scopes.py  usage.py
mypalace/cache/: __init__.py  client.py  decorator.py
mypalace/cli/: __init__.py  admin.py
mypalace/dynamics/: service.py
mypalace/events/: __init__.py  broker.py  types.py
mypalace/graph/: __init__.py  client.py  service.py
mypalace/grpc/: __init__.py  arc_servicer.py  auth_interceptor.py  dynamics_servicer.py  episode_servicer.py  ingestion_servicer.py  intention_servicer.py  job_servicer.py  memory_servicer.py  retrieval_servicer.py  server.py  session_servicer.py
mypalace/grpc/_generated/: __init__.py  (+2 more)
mypalace/health/: __init__.py  checks.py  config_validator.py
mypalace/intentions/: service.py
mypalace/observability/: __init__.py  db.py  logging.py  metrics.py  middleware.py  tracing.py
mypalace/prompts/: ingestion.py  topics.py
mypalace/ratelimit/: __init__.py  limiter.py  middleware.py
mypalace/retrieval/: ingestion.py  layered.py
mypalace/workers/: __init__.py  backup.py  handlers.py  queue.py  runner.py
mypalace_client/: LICENSE.md  README.md  pyproject.toml
mypalace_client/mypalace_client/: __init__.py  client.py  grpc.py  models.py
mypalace_client/mypalace_client/cli/: __init__.py  admin.py
mypalace_client/tests/: test_cli_admin.py  test_client.py  test_client_emotional.py  test_client_topics.py  test_models.py
palace/: _llm_utils.py  arc_service.py  config.py  context_service.py  database.py  embeddings.py  episode_service.py  job_service.py  llm.py  main.py  memory_service.py  models.py  session_service.py  vector.py
palace/api/: admin.py  arcs.py  audit.py  common.py  context.py  dynamics.py  episodes.py  events.py  graph.py  intentions.py  jobs.py  maintenance.py  memories.py  portability.py  reembed.py  retrieval.py  sessions.py  stats.py  tenants.py
palace/audit/: __init__.py  middleware.py
palace/auth/: __init__.py  context.py  key_service.py  middleware.py  scopes.py  tenant.py
palace/cache/: __init__.py  client.py  decorator.py
palace/dynamics/: fsrs.py  service.py
palace/events/: __init__.py  broker.py
palace/graph/: __init__.py  service.py
palace/grpc/: __init__.py  arc_servicer.py  auth_interceptor.py  dynamics_servicer.py  episode_servicer.py  ingestion_servicer.py  intention_servicer.py  job_servicer.py  memory_servicer.py  retrieval_servicer.py  server.py  session_servicer.py
palace/intentions/: service.py  triggers.py
palace/observability/: __init__.py  logging.py  metrics.py  middleware.py  tracing.py
palace/prompts/: reflection.py  synthesis.py
palace/ratelimit/: __init__.py  limiter.py  middleware.py
palace/retrieval/: ingestion.py  layered.py
palace/workers/: __init__.py  handlers.py  queue.py  runner.py
palace_client/: README.md  pyproject.toml
palace_client/palace_client/: __init__.py  client.py  exceptions.py  grpc.py  models.py
palace_client/tests/: test_client.py  test_models.py
proto/: mypalace.proto  palace.proto
tests/: conftest.py  test_admin_ui_mount.py  test_alembic_0010_shadow_copy.py  test_alembic_revision_guard.py  test_alembic_stamp.py  test_arcs.py  test_audit.py  test_auth_key_service.py  test_auth_keys.py  test_auth_middleware.py  test_auth_scopes.py  test_backup_worker.py  test_cache.py  test_cli_admin.py  test_cli_admin_shim.py  test_context.py  test_context_budget.py  test_cross_tenant_search.py  test_db_observability.py  test_dynamics.py  test_embedding_cache.py  test_emotional_api.py  test_emotional_model.py  test_emotional_service.py  test_entity_api.py  test_entity_service.py  test_episodes.py  test_events.py  test_graph_routes.py  test_graph_service.py  test_grpc_arc_servicer.py  test_grpc_dynamics_servicer.py  test_grpc_episode_servicer.py  test_grpc_ingestion_servicer.py  test_grpc_intention_servicer.py  test_grpc_job_servicer.py  test_grpc_retrieval_servicer.py  test_grpc_scope_map.py  test_grpc_servicer.py  test_grpc_session_servicer.py  (+34 more)
tests/integration/: conftest.py  test_alembic_live.py  test_arcs_live.py  test_auth_live.py  test_client_e2e.py  test_dynamics_live.py  test_episodes_live.py  test_ingestion_live.py  test_intentions_live.py  test_jobs_live.py  test_layered_live.py  test_memories_live.py  test_sessions_live.py  test_tenancy_live.py  test_workers_live.py
(+41 files in other folders)
