[project]
name = "palace-memory"
version = "0.1.0"
description = "Standalone memory service for AI assistants"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "qdrant-client>=1.12",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.3,<5",
    "transformers<5",  # torch 2.2.2 (macOS x86 ceiling) is incompatible with transformers 5.x
    "numpy<2",         # torch 2.2.2 was built against numpy 1.x ABI
    "openai>=1.59",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "httpx>=0.28",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]
ignore = ["UP046"]  # Generic[T] is the canonical Pydantic v2 idiom

[tool.ruff.lint.per-file-ignores]
"palace_client/palace_client/exceptions.py" = ["N818"]  # PalaceNotFound, PalaceTransport are deliberate public API names

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
