[project]
name = "mypalace"
version = "0.7.0"
description = "MyPalace — standalone memory service for AI assistants. Full HTTP + gRPC surface, multi-tenancy, graph, cache, workers, rate limits, websockets, observability, analytics, bulk import/export, TTL, embedding migration, audit log, memory versioning."
requires-python = ">=3.12"
authors = [{ name = "BangRocket" }]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "qdrant-client>=1.12",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.3,<5",
    "transformers<5",  # torch 2.2.2 (macOS x86 ceiling) is incompatible with transformers 5.x
    "numpy<2",         # torch 2.2.2 was built against numpy 1.x ABI
    "openai>=1.59",
    "structlog>=24.4",
    "bcrypt>=4.1",
    "falkordb>=1.0",
    "redis>=5.0",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=4.25",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.30",
    "opentelemetry-sdk>=1.30",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "httpx>=0.28",
    "ruff>=0.9",
    "testcontainers[postgres]>=4.9",
    "psycopg[binary]>=3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]
ignore = ["UP046"]  # Generic[T] is the canonical Pydantic v2 idiom

[tool.ruff.lint.per-file-ignores]
"mypalace_client/mypalace_client/exceptions.py" = ["N818"]  # PalaceNotFound, PalaceTransport are deliberate public API names
"mypalace/grpc/_generated/*.py" = ["ALL"]  # protoc-generated stubs; do not lint
"mypalace/grpc/*_servicer.py" = ["N802"]  # gRPC servicer methods must match proto (PascalCase)

[project.urls]
Homepage = "https://github.com/BangRocket/MyPalace"
Repository = "https://github.com/BangRocket/MyPalace"
Issues = "https://github.com/BangRocket/MyPalace/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mypalace*"]
exclude = ["palace_client*", "mypalace_client*"]

[tool.setuptools.package-data]
"mypalace.grpc._generated" = ["*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "integration: tests that require live postgres + qdrant containers (opt-in via -m integration)",
]
addopts = "-m 'not integration'"
