[project]
name = "mypalace-client"
version = "0.12.0"
license = "PolyForm-Noncommercial-1.0.0"
description = "Async Python client for the MyPalace memory service"
requires-python = ">=3.10"
authors = [{ name = "BangRocket" }]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
]

[project.optional-dependencies]
grpc = [
    "grpcio>=1.60",
    "protobuf>=4.25",
]
# CLI is bundled with the package; the extra exists so operators can
# `pip install 'mypalace-client[cli]'` and signal intent. httpx is
# already a base dep, so the extra adds no transitive deps today.
cli = []
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[project.scripts]
mypalace-admin = "mypalace_client.cli.admin:main"

[project.urls]
Homepage = "https://github.com/BangRocket/MyPalace"
Repository = "https://github.com/BangRocket/MyPalace"
Issues = "https://github.com/BangRocket/MyPalace/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mypalace_client*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
