[project]
name = "palace-client"
version = "0.1.0"
description = "Async Python client for the Palace Memory Service"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
