[project]
name = "palace-client"
version = "0.5.0"
description = "Async Python client for the Palace Memory Service"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "BangRocket" }]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
]

[project.optional-dependencies]
grpc = [
    "grpcio>=1.60",
    "protobuf>=4.25",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[project.urls]
Homepage = "https://github.com/BangRocket/palace-memory"
Repository = "https://github.com/BangRocket/palace-memory"
Issues = "https://github.com/BangRocket/palace-memory/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
